ckad.manifests/netpol/beta-gamma-testpods.yaml
apiVersion: v1
kind: Pod
metadata:
  name: beta
  labels:
    radiation: beta
spec:
  containers:
  - name: port5000
    image: busybox
    command: ["/bin/nc", "-lk", "-p", "5000", "-e", "/bin/sh", "-c", "hostname; echo port 6000"]
    ports:
    - containerPort: 6000
---
apiVersion: v1
kind: Pod
metadata:
  name: gamma
  labels:
    radiation: gamma
spec:
  containers:
  - name: port5000
    image: busybox
    command: ["/bin/nc", "-lk", "-p", "5000", "-e", "/bin/sh", "-c", "hostname; echo port 6000"]
    ports:
    - containerPort: 6000
