ckad.manifests/netpol/alpha-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: alpha
  labels:
    app: alpha
spec:
  ports:
  - name: port5000
    port: 5000
  - name: port5001
    port: 5001
  - name: port5002
    port: 5002
  selector:
    app: alpha
